--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para Mi San Valentín</title>
     <link rel="stylesheet" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
     <div class="card">
         <h1 id="counter"></h1>
         <p>
-            Desde el 5 de julio de 2024 mi vida cambió completamente.
-            Gracias por existir, por tu risa y por ser tú.
+            Inicia en:
         </p>
     </div>
 
