--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class="letter hidden" id="letter">
         <h2>💌</h2>
         <p>
-            Prometo seguir construyendo momentos contigo,
-            cuidarte y hacerte sonreír siempre.
+            Gracias por convertir los días comunes en recuerdos que quiero repetir toda la vida, me has llenado de tantos de ellos, 
+			que no importa cuanto pase, siempre te voy amar como el primer dia. TE AMO
         </p>
     </div>
 
@@ -36,3 +36,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
